# ever

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  release.yml
docs/: API_Reference.md  DEFAULT_SETTING.md  ERModule.md  LEARNING_RATE.md  USAGE.md
ever/: __init__.py  __main__.py
ever/api/: infer_tool.py
ever/api/data/: __init__.py  cross_validation.py  distributed.py
ever/api/metric/: __init__.py  evaluate_fn.py  pixel.py
ever/api/preprocess/: __init__.py
ever/api/trainer/: __init__.py  apex_ddp_trainer.py  dp_trainer.py  th_amp_ddp_trainer.py  th_ddp_trainer.py  trainer.py
ever/core/: builder.py  checkpoint.py  config.py  default_backward.py  device.py  dist.py  iterator.py  launcher.py  logger.py  registry.py  to.py
ever/data/: __init__.py  cross_validation.py  distributed.py
ever/interface/: __init__.py  callback.py  configurable.py  dataloader.py  module.py  transform_base.py
ever/metric/: __init__.py  confusion_matrix.py  evaluate_fn.py  pixel.py  utils.py
ever/module/: README.md  __init__.py  _densenet.py  _hrnet.py  aspp.py  context_block.py  deeplabv3p_head.py  densenet.py  efficientnet.py  fpn.py  fs_relation.py  hrnet.py  hrnet_head.py  loss.py  misc.py  ops.py  ppm.py  resnest.py  resnet.py  se_block.py
ever/opt/: __init__.py  learning_rate.py  optimizer.py
ever/preprocess/: __init__.py  albu.py  function.py  segm.py  thcomm.py  thsegm.py
ever/trainer/: __init__.py  th_ddp_trainer.py  trainer.py
ever/util/: __init__.py  _main.py  eda.py  lr_search.py  param_util.py  seedlib.py
(+16 files in other folders)
